--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
   "name": "expservice",
-  "version": "1.0.0",
-  "description": "express service for bill application",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/badbadgao/expservice.git"
-  },
-  "keywords": [
-    "express",
-    "js",
-    "service"
-  ],
-  "author": "wei gao",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/badbadgao/expservice/issues"
-  },
-  "homepage": "https://github.com/badbadgao/expservice#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "^2.0.3"
   }
 }
